# Restaurant-Reservation-App

./: .dockerignore  .env.example  .gitignore  Dockerfile.dev  README.md  docker-compose.dev.yml  init-db.sh  init-db.sql  pyproject.toml
config/: celery.py  permissions.py  settings.py  urls.py
reservation/: admin.py  models.py  serializers.py  tasks.py  test_api.py  tests.py  urls.py  views.py
reservation/fixtures/: payments.json  reservations.json  waitlist.json
reservation/migrations/: 0001_initial.py  0002_initial.py  0003_alter_reservation_status.py  0004_alter_waitlistentry_options_and_more.py
reservation/services/: availability.py  reservation.py  waitlist.py
restaurant/: admin.py  models.py  serializers.py  urls.py  views.py
restaurant/fixtures/: restaurant.json  tables.json
restaurant/migrations/: 0001_initial.py
users/: admin.py  models.py  urls.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py  0002_remove_customuser_updated_at.py
